<resources>
    <string name="app_name">Movies Brasil</string>
    <string name="title">título</string>
    <string name="vote">8.6</string>
    <string name="banner">Banner</string>
    <string name="menu">Menu</string>
    <string name="search_movie">Buscar filme</string>
    <string name="banner_do_filme">Banner do filme</string>
    <string name="card_movie">Card do filme</string>
    <string name="home">Movies Brasil</string>
    <string name="search">Buscar Filme</string>
    <string name="favorites">Favoritos</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="details">Detalhes</string>
    <string name="error_on_loading_screen_details">Erro ao tentar carregar tela de detalhes</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="item_description">O confronto final entre as forças do bem e do mal que lutam pelo controle do futuro da Terra Média se aproxima. Sauron planeja um grande ataque a Minas Tirith, capital de Gondor, o que faz com que Gandalf e Pippin partam para o local na intenção de ajudar a resistência. Um exército é reunido por Theoden em Rohan, em mais uma tentativa de deter as forças de Sauron. Enquanto isso, Frodo, Sam e Gollum seguem sua viagem rumo à Montanha da Perdição para destruir o anel.</string>
    <string name="favorite_movie">Favoritar filme</string>
    <string name="remove_movie">Remover filme</string>
    <string name="overview">Resumo:</string>
    <string name="search_field">Search...</string>
    <string name="unable_to_add_the_favorite_list">Nâo foi possível adicionar o filme á lista de favoritos!</string>
    <string name="unable_to_load_movies">Não foi possível carregar os filmes</string>
    <string name="try_again">Tentar novamente</string>
    <string name="similar_movie_label">Conteúdos semelhantes</string>
    <string name="add_to_favorites">Adicionar á minha lista de favoritos</string>
    <string name="play_movie">play</string>
    <string name="app_logo">logo do aplicativo</string>
    
    <!-- Details Screen -->
    <string name="vote_average_model_details">8.4</string>
    <string name="release_date_model_details">2020</string>
</resources>