<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_151515">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_movie"
        android:layout_width="115dp"
        android:layout_height="126dp"
        android:backgroundTint="@color/primary_color"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/iv_thumbnail_item_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/card_movie"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_item_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:maxLines="1"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_movie"/>

    <ImageView
        android:id="@+id/button_favorite"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:src="@drawable/ic_baseline_favorite_24"
        android:contentDescription="@string/remove_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color" />
</androidx.constraintlayout.widget.ConstraintLayout>